model改为record + 整理代码